--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "my-first-app",
+  "name": "Houssem Saafi",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -48,5 +49,9 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.6.2",
     "tslint": "~5.11.0"
+  }
+    "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   }
 }
