--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^9.0.0",
     "bootstrap": "3.3.7",
     "core-js": "^3.1.2",
+    "express": "^4.17.1",
     "ngx-page-scroll": "^7.0.5",
     "ngx-page-scroll-core": "^7.0.5",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
@@ -50,7 +52,7 @@
     "ts-node": "~8.6.2",
     "tslint": "~5.11.0"
   },
-    "engines": {
+  "engines": {
     "node": "12.18.2",
     "npm": "6.14.5"
   }
