--- a/.github/workflows/main_health-center(health).yml
+++ b/.github/workflows/main_health-center(health).yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - health-center
 
 on:
@@ -19,24 +16,28 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: '16.13.0'
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install --force
           npm run build --if-present
+
+      - name: Create artifact archive
+        run: |
+          zip -r artifact.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: artifact.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'health'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -45,11 +46,14 @@ jobs:
         with:
           name: node-app
 
+      - name: Unzip artifact
+        run: unzip -o ${{ github.workspace }}/node-app/artifact.zip -d ${{ github.workspace }}/node-app
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'health-center'
-          slot-name: 'health'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2ABB78E3ED7E4E32974B21353762E437 }}
-          package: .
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6EBDA309459D413A956EF317F05CD420 }}
+          package: ${{ github.workspace }}/node-app
